--- a/style.css
+++ b/style.css
@@ -12,12 +12,14 @@ html {
     background-color: black;
     height: 20rem;
     width: 20rem;
-    transition: background-color;
+    transition: background-color, height, width;
     transition-duration: 6s;
 }
 
 #div1:hover {
     background-color: lightgray;
+    height: 30rem;
+    width: 30rem;
 }
 
 #div2 > p {
